tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-type-arg-close.ari
fn main() -> i64 {
  let value: Vec[i64 = [];
  return 0;
}
